--- a/style.css
+++ b/style.css
@@ -1,5 +1,38 @@
+h1 {
+  color: red;
+  text-align: center;
+  
+} 
+
+nav a {
+  background-color: #c0c0c0;
+  padding: 10px;
+  
+}
+
+div p {
+ text-align: center;
+}
+
+#featured-property > p {
+ width: 800px;
+ text-align: center;
+ margin: auto;
+
+}
+
+#details > div {
+ float:left;
+ background-color:red;
+ width: 25%;
+ text-align: center;
+
+}
+
 body {
   width: 100%;
   height: 100%;
   margin: 0;
+  text-align: center;
+  
 }
